--- a/index.html
+++ b/index.html
@@ -1520,6 +1520,16 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[66] L. Qiao, <b>Z. Gao</b>, M. B. Mashhadi, and D. Gündüz, "Massive digital over-the-air computation for communication-efficient federated edge learning," to appear in IEEE Journal on Selected Areas in Communications, 2024. 
+                            [<a href="https://arxiv.org/abs/2405.15969" target="_blank">arXiv</a>]
+                            [<a href="https://github.com/liqiao19/MD-AirComp" target="_blank">
+                                <font color="#FF0000">Codes</font>
+                            </a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[65] Kuiyu Wang, <b>Zhen Gao</b>, Sheng Chen, Boyu Ning, Gaojie Chen, Yu Su, Zhaocheng Wang, H. Vincent Poor, "Knowledge and Data Dual-Driven Channel Estimation and Feedback for Ultra-Massive MIMO Systems under Hybrid Field Beam Squint Effect," 
                             in IEEE Transactions on Wireless Communications, doi: 10.1109/TWC.2024.3380638. 
