--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 
                 <li> <b>
                     <font color="#FF0000">[2024.06]</font>
-                </b> Xingyu Zhou was awarded Xu-Teli Fellowship（周星宇获得北理工学生最高荣誉奖学金--徐特立奖学金5万元）
+                </b> Xingyu Zhou was awarded Xu-Teli Fellowship（<a href=".\Files\3120210833.pdf" target="_blank">
+                <font>周星宇获得北理工学生最高荣誉奖学金--徐特立奖学金5万元</font></a>）
                 </li>
 
                 <li> <b>
