--- a/index.html
+++ b/index.html
@@ -3120,6 +3120,31 @@
                 </A>
                 <ul id="gradstu">
                     <li> <b>
+                        <font color="#FF0000">[2024]</font>
+                    </b> 周星宇，工学硕士,&nbsp; 目前就职于中国电科29所（四川成都）.
+                    <details>
+                        <summary>在读期间成果</summary>
+                        <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                            周星宇，2021级硕士，获2024年徐特立奖学金，2023年国家奖学金，2022年特等学业奖学金等。
+                            硕士期间发表IEEE TWC、IEEE Network期刊论文2篇，发表IEEE Globecom、ICCC会议论文2篇及智能融合网络（英文）期刊论文1篇。
+                            获校优秀学生、北京市优秀毕业生表彰。
+                        </p>   
+                    </details>
+                    </li>
+
+                    <li> <b>
+                        <font color="#FF0000">[2024]</font>
+                    </b> 陈劭斌, 电子信息专业硕士,&nbsp; 目前就职于航天二院二十五所.
+                    <details>
+                        <summary>在读期间成果</summary>
+                        <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                            陈劭斌，2021级硕士，硕士学位期间以第一作者发表EI收录IEEE WCNC会议论文1篇、WCSP会议论文1篇；
+                            曾获第二届全国大学生数据统计与分析竞赛研究生组一等奖、第八届互联网+大学生创新创业大赛北京理工大学初银奖以及北京理工大学优秀学生(2022-2023学年)、北京理工大学优秀毕业生表彰。
+                        </p>   
+                    </details>
+                    </li>
+
+                    <li> <b>
                             <font color="#FF0000">[2023]</font>
                         </b> 柯玛龙, 博士,&nbsp; 目前就职于锐捷网络.
                         <details>
