--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul id="latestnews">
+                <li> <b>
+                    <font color="#FF0000">[2024.07]</font>
+                </b> 高镇教授入选通信领域顶级期刊 IEEE Trans. Communications编委
+
+                <li> <b>
+                    <font color="#FF0000">[2024.07]</font>
+                </b> 张翼飞获得华为公司实习
+                </li>
 
                 <li> <b>
                     <font color="#FF0000">[2024.06]</font>
@@ -151,13 +159,6 @@
                 </a>)【基于AI的信道语义获取与6G通感一体化】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.12]</font>
-                    </b> Paper of Malong Ke was accecpted by IEEE IoTJ (
-                        <a href="https://ieeexplore.ieee.org/document/10329933" target="_blank">
-                    <font>柯玛龙论文被IEEE IOTJ (IF=10.6)期刊录用</font>
-                    </a>)【6G海量通信免调度接入】
-                </li>
 
                 
 
@@ -169,6 +170,13 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                        <font color="#FF0000">[2023.12]</font>
+                    </b> Paper of Malong Ke was accecpted by IEEE IoTJ (
+                        <a href="https://ieeexplore.ieee.org/document/10329933" target="_blank">
+                    <font>柯玛龙论文被IEEE IOTJ (IF=10.6)期刊录用</font>
+                    </a>)【6G海量通信免调度接入】
+                </li>
 
                     <li> <b>
                         <font color="#FF0000">[2023.11]</font>
