--- a/index.html
+++ b/index.html
@@ -83,7 +83,16 @@
             <ul id="latestnews">
                 <li> <b>
                     <font color="#FF0000">[2024.07]</font>
+                </b> Paper of Li Qiao was accepted by IEEE WCL (
+                    <a href="https://arxiv.org/abs/2405.15969" target="_blank">    
+                    <font>乔力论文被IEEE WCL (IF=4.6)录用</font>
+                    </a> )【生成式AI大模型驱动的计算视觉语义传输】
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.07]</font>
                 </b> 高镇教授入选通信领域顶级期刊 IEEE Trans. Communications编委
+                </li>
 
                 <li> <b>
                     <font color="#FF0000">[2024.07]</font>
