--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                    <font color="#FF0000">[2024.08]</font>
+                </b> Paper of Minghui Wu was accepted by IEEE JSAC (    
+                    <font>吴铭晖论文被IEEE JSAC (IF=13.79)期刊录用</font>
+                    )【天基大规模MIMO的联合图像语义编码与波束成形】
+                </li>
+
+                <li> <b>
                     <font color="#FF0000">[2024.07]</font>
                 </b> Paper of Li Qiao was accepted by IEEE WCL (
                     <a href="https://arxiv.org/abs/2405.15969" target="_blank">    
