Update paper list

--- a/index.html
+++ b/index.html
@@ -1545,6 +1545,38 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[71] L. Lu, Z. Wang, Z. Gao, S. Chen and H. Vincent Poor, "Block-Sparse Tensor Recovery," in IEEE Transactions on Information Theory, doi: 10.1109/TIT.2024.3447050.
+                            [<a href="https://ieeexplore.ieee.org/document/10643188" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[70] Hongshan Liu, Tong Qin, <b>Zhen Gao</b>, Tianqi Mao, Keke Ying, Ziwei Wan, Li Qiao, Rui Na, Zhongxiang Li, Chun Hu, et al. Near-Space Communications: The Last Piece of 6G Space–Air–Ground–Sea Integrated Network Puzzle. Space Sci Technol. 2024;4:0176.DOI:10.34133/space.0176.
+                            [<a href="https://spj.science.org/doi/full/10.34133/space.0176" target="_blank">Space: Science & Technology URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[69] Minghui Wu, <b>Zhen Gao</b>, Zhaocheng Wang, Dusit Niyato, George K. Karagiannidis and Sheng Chen, "Deep Joint Semantic Coding and Beamforming for Near-Space Airship-Borne Massive MIMO Network," to appear in IEEE Journal on Selected Areas in Communications, 2024.
+                            [<a href="https://arxiv.org/abs/2405.19889" target="_blank">arXiv</a>]
+                            [<a href="https://github.com/wuminghui123/JSCBF" target="_blank">
+                                <font color="#FF0000">Codes</font>
+                            </a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[68] Q. Luo et al., "AFDM-SCMA: A Promising Waveform for Massive Connectivity over High Mobility Channels," in IEEE Transactions on Wireless Communications, doi: 10.1109/TWC.2024.3413980.
+                            [<a href="https://ieeexplore.ieee.org/document/10566604" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[67] L. Qiao, M. B. Mashhadi, <b>Z. Gao</b>, C. H. Foh, P. Xiao and M. Bennis, "Latency-Aware Generative Semantic Communications With Pre-Trained Diffusion Models," in IEEE Wireless Communications Letters, doi: 10.1109/LWC.2024.3429295.
+                            [<a href="https://ieeexplore.ieee.org/document/10599525" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[66] L. Qiao, <b>Z. Gao</b>, M. B. Mashhadi, and D. Gündüz, "Massive digital over-the-air computation for communication-efficient federated edge learning," to appear in IEEE Journal on Selected Areas in Communications, 2024. 
@@ -1557,7 +1589,7 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[65] Kuiyu Wang, <b>Zhen Gao</b>, Sheng Chen, Boyu Ning, Gaojie Chen, Yu Su, Zhaocheng Wang, H. Vincent Poor, "Knowledge and Data Dual-Driven Channel Estimation and Feedback for Ultra-Massive MIMO Systems under Hybrid Field Beam Squint Effect," 
-                            in IEEE Transactions on Wireless Communications, doi: 10.1109/TWC.2024.3380638. 
+                            in IEEE Transactions on Wireless Communications, vol. 23, no. 9, pp. 11240-11259, Sept. 2024. 
                             [<a href="https://ieeexplore.ieee.org/document/10486834" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
@@ -1571,7 +1603,7 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[63] Yifei Zhang, <b>Zhen Gao</b>, Jingjing Zhao, Ziming He, Yunsheng Zhang, Chen Lu, Pei Xiao, "AI Empowered Channel Semantic Acquisition for 
-                            6G Integrated Sensing and Communication Networks," in IEEE Network, doi: 10.1109/MNET.2024.3354264.
+                            6G Integrated Sensing and Communication Networks," in IEEE Network, vol. 38, no. 2, pp. 45-53, March 2024.
                             [<a href="https://arxiv.org/abs/2401.09127" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10400499" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/Tocaloid/JCASCasterNet" target="_blank">
