--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul id="latestnews">
+
+                <li> <b>
+                    <font color="#FF0000">[2024.09]</font>
+                </b> Yifei Zhang was awarded the Second Prize of the Wu Handong Wei Maohua Microwave Information Fellowship (    
+                    <a href=".\Files\zyf.jpg" target="_blank">     
+                <font>张翼飞获得伍捍东魏茂华微波信息奖学金二等奖8千元</font>
+                    )
+                </li>
+
                 <li> <b>
                     <font color="#FF0000">[2024.08]</font>
                 </b> Paper of Minghui Wu was accepted by IEEE JSAC (    
