--- a/index.html
+++ b/index.html
@@ -87,14 +87,15 @@
                 </b> Yifei Zhang was awarded the Second Prize of the Wu Handong Wei Maohua Microwave Information Fellowship (    
                     <a href=".\Files\zyf.jpg" target="_blank">     
                 <font>张翼飞获得伍捍东魏茂华微波信息奖学金二等奖8千元</font>
-                    )
+                </a> )
                 </li>
 
                 <li> <b>
                     <font color="#FF0000">[2024.08]</font>
-                </b> Paper of Minghui Wu was accepted by IEEE JSAC (    
+                </b> Paper of Minghui Wu was accepted by IEEE JSAC (
+                    <a href="https://ieeexplore.ieee.org/document/10680080" target="_blank">
                     <font>吴铭晖论文被IEEE JSAC (IF=13.79)期刊录用</font>
-                    )【天基大规模MIMO的联合图像语义编码与波束成形】
+                    </a>)【天基大规模MIMO的联合图像语义编码与波束成形】
                 </li>
 
                 <li> <b>
@@ -1555,7 +1556,7 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[71] L. Lu, Z. Wang, Z. Gao, S. Chen and H. Vincent Poor, "Block-Sparse Tensor Recovery," in IEEE Transactions on Information Theory, doi: 10.1109/TIT.2024.3447050.
+                        <span>[71] L. Lu, Z. Wang, <b>Z. Gao</b>, S. Chen and H. Vincent Poor, "Block-Sparse Tensor Recovery," in IEEE Transactions on Information Theory, doi: 10.1109/TIT.2024.3447050.
                             [<a href="https://ieeexplore.ieee.org/document/10643188" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
@@ -1567,8 +1568,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[69] Minghui Wu, <b>Zhen Gao</b>, Zhaocheng Wang, Dusit Niyato, George K. Karagiannidis and Sheng Chen, "Deep Joint Semantic Coding and Beamforming for Near-Space Airship-Borne Massive MIMO Network," to appear in IEEE Journal on Selected Areas in Communications, 2024.
-                            [<a href="https://arxiv.org/abs/2405.19889" target="_blank">arXiv</a>]
+                        <span>[69] Minghui Wu, <b>Zhen Gao</b>, Zhaocheng Wang, Dusit Niyato, George K. Karagiannidis and Sheng Chen, "Deep Joint Semantic Coding and Beamforming for Near-Space Airship-Borne Massive MIMO Network," in IEEE Journal on Selected Areas in Communications, doi: 10.1109/JSAC.2024.3460084.
+                            [<a href="https://ieeexplore.ieee.org/document/10680080" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/wuminghui123/JSCBF" target="_blank">
                                 <font color="#FF0000">Codes</font>
                             </a>]
@@ -1588,8 +1589,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[66] L. Qiao, <b>Z. Gao</b>, M. B. Mashhadi, and D. Gündüz, "Massive digital over-the-air computation for communication-efficient federated edge learning," to appear in IEEE Journal on Selected Areas in Communications, 2024. 
-                            [<a href="https://arxiv.org/abs/2405.15969" target="_blank">arXiv</a>]
+                        <span>[66] L. Qiao, <b>Z. Gao</b>, M. B. Mashhadi, and D. Gündüz, "Massive digital over-the-air computation for communication-efficient federated edge learning," in IEEE Journal on Selected Areas in Communications, doi: 10.1109/JSAC.2024.3431572.  
+                            [<a href="https://ieeexplore.ieee.org/document/10648926" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/liqiao19/MD-AirComp" target="_blank">
                                 <font color="#FF0000">Codes</font>
                             </a>]
