--- a/index.html
+++ b/index.html
@@ -83,6 +83,33 @@
             <ul id="latestnews">
 
                 <li> <b>
+                    <font color="#FF0000">[2024.10]</font>
+                </b> 吴铭晖、李卓然、王其飞获得第三届“华为杯”北京高校无线算法大赛一等奖奖金2万元 
+                <a href="https://mp.weixin.qq.com/s/LbjzQLlGzWd5-wBp6by1vg" target="_blank">
+                    <font color="#FF0000">【北理工研究生教育公众号报道】</font>
+                </a>
+                <a href="https://mp.weixin.qq.com/s/hfXcKVycOCfD8Wya2ktuBg" target="_blank"></a>
+                    <font color="#FF0000">【北理工交叉院新闻报道】</font>
+                </a>
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.10]</font>
+                </b> Paper of Zhuoran Li was accepted by IEEE IOTJ (
+                    <a href="https://arxiv.org/pdf/2410.22746" target="_blank">
+                    <font>李卓然论文被IEEE IOTJ (IF=8.1)录用</font>
+                    </a>)【面向低空经济的MIMO通信干扰一体化】
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.10]</font>
+                </b> Paper of Keke Ying was accepted by IEEE TCOM (
+                    <a href="https://xplorestaging.ieee.org/document/10731874" target="_blank">
+                    <font>应柯科论文被IEEE TCOM (IF=7.2)录用</font>
+                    </a>)【可重构像素MIMO：电磁域上的预编码和信道估计】
+                </li>
+
+                <li> <b>
                     <font color="#FF0000">[2024.09]</font>
                 </b> Yifei Zhang was awarded the Second Prize of the Wu Handong Wei Maohua Microwave Information Fellowship (    
                     <a href=".\Files\zyf.jpg" target="_blank">     
@@ -1555,6 +1582,18 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[73] Z. Li, <b>Z. Gao</b>, et al. "Unauthorized UAV Countermeasure for Low-Altitude Economy: Joint Communications and Jamming based on MIMO Cellular Systems," accepted by IEEE IOTJ.
+                            [<a href="https://arxiv.org/pdf/2410.22746" target="_blank">arXiv</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[72] K. Ying, <b>Z. Gao</b>, Y. Su, T. Qin, M. Matthaiou and R. Schober, "Reconfigurable Massive MIMO: Precoding Design and Channel Estimation in the Electromagnetic Domain," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2024.3485587.                  
+                            [<a href="https://xplorestaging.ieee.org/document/10731874" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[71] L. Lu, Z. Wang, <b>Z. Gao</b>, S. Chen and H. Vincent Poor, "Block-Sparse Tensor Recovery," in IEEE Transactions on Information Theory, doi: 10.1109/TIT.2024.3447050.
                             [<a href="https://ieeexplore.ieee.org/document/10643188" target="_blank">IEEE URL</a>]
