--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,16 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[73] Z. Li, <b>Z. Gao</b>, et al. "Unauthorized UAV Countermeasure for Low-Altitude Economy: Joint Communications and Jamming based on MIMO Cellular Systems," accepted by IEEE IOTJ.
+                        <span>[74] Ye Zeng, Li Qiao, <b>Zhen Gao</b>, Tong Qin, Zhonghuai Wu, Emad Khalaf, Sheng Chen and Mohsen Guizani. "CSI-GPT: Integrating Generative Pre-Trained Transformer with Federated-Tuning to Acquire Downlink Massive MIMO Channels," accepted in IEEE Transactions on Vehicular Technology. 2024.
+                            [<a href="https://arxiv.org/abs/2406.03438" target="_blank">arXiv</a>]
+                            [<a href="https://github.com/BIT-ZY/CSI-GPT" target="_blank">
+                                <font color="#FF0000">Codes</font>
+                            </a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[73] Z. Li, <b>Z. Gao</b>, et al. "Unauthorized UAV Countermeasure for Low-Altitude Economy: Joint Communications and Jamming based on MIMO Cellular Systems," accepted by IEEE IOTJ. 2024.
                             [<a href="https://arxiv.org/pdf/2410.22746" target="_blank">arXiv</a>]
                         </span>
                     </p>
@@ -1614,6 +1623,25 @@
                             </a>]
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyFour">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyFour" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?isOutside=true&aid=113033170912546&bvid=BV1VxsxeEE36&cid=25601901577&p=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[68] Q. Luo et al., "AFDM-SCMA: A Promising Waveform for Massive Connectivity over High Mobility Channels," in IEEE Transactions on Wireless Communications, doi: 10.1109/TWC.2024.3413980.
@@ -1642,6 +1670,25 @@
                             [<a href="https://ieeexplore.ieee.org/document/10486834" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyThree">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyThree" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?isOutside=true&aid=1504802307&bvid=BV1rD421G7nY&cid=1557428433&p=1&as_wide=1&high_quality=1&autoplay=0&muted=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[64] Yang Wang, <b>Zhen Gao</b>, Sheng Chen, Chun Hu, Dezhi Zheng, "Deep Learning–Based Channel Extrapolation and Multiuser Beamforming for RIS-aided 
