feat: add citation  badge for all jsac

--- a/index.html
+++ b/index.html
@@ -1692,7 +1692,7 @@
                             [<a href="https://ieeexplore.ieee.org/document/10648926" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/liqiao19/MD-AirComp" target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>]
+                            </a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2024.3431572">
                         </span>
                     </p>
 
@@ -1723,7 +1723,7 @@
                     </div>
 
                     <p class="pcontainer">
-                        <span>[64] Yang Wang, <b>Zhen Gao</b>, Sheng Chen, Chun Hu, Dezhi Zheng, "Deep Learning–Based Channel Extrapolation and Multiuser Beamforming for RIS-aided 
+                        <span>[64] Yang Wang, <b>Zhen Gao</b>, Sheng Chen, Chun Hu, Dezhi Zheng, "Deep Learning–Based Channel Extrapolation and Multiuser Beamforming for RIS-aided 
                             Terahertz Massive MIMO Systems over Hybrid-Field Channels," Intelligent Computing, 13 Mar 2024 Vol 3.
                             [<a href="https://spj.science.org/doi/full/10.34133/icomputing.0065" target="_blank">URL</a>]
                         </span>
@@ -1913,7 +1913,7 @@
                             [<a href="https://ieeexplore.ieee.org/document/10123361" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/kekeyingBIT/LEO" target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>]
+                            </a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2023.3273699">
                         </span>
                     </p>
                     <div class="panel panel-default">
@@ -1980,7 +1980,7 @@
                             "Next-Generation URLLC With Massive Devices: A Unified Semi-Blind Detection 
                             Framework for Sourced and Unsourced Random Access," in IEEE Journal on Selected Areas in Communications, vol. 41, no. 7, pp. 2223-2244, July 2023.
                             [<a href="https://arxiv.org/abs/2303.04414" target="_blank">arXiv</a>]
-                            [<a href="https://ieeexplore.ieee.org/document/10138415" target="_blank">IEEE URL</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10138415" target="_blank">IEEE URL</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2023.3280981">
                         </span>
                     </p>
 
@@ -2063,7 +2063,7 @@
                             [<a href="https://ieeexplore.ieee.org/document/10032139" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/wuminghui123/DL_RSMA" target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>]
+                            </a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2023.3240781">
                         </span>
                     </p>
 
@@ -2146,7 +2146,7 @@
                             [<a href="https://github.com/wuminghui123/D3L-HB" target="_blank">
                                 <font color="#FF0000">Codes</font>
                             </a>]
-                            [<a href="https://ieeexplore.ieee.org/document/9849060/" target="_blank">IEEE URL</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9849060/" target="_blank">IEEE URL</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2022.3196064">
                         </span>
                     </p>
                     <div class="panel panel-default">
@@ -2180,7 +2180,7 @@
                             [<a href="https://ieeexplore.ieee.org/document/9726781" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/All-World/Massive_IoT_Access/tree/main" target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>]
+                            </a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2022.3143255">
                         </span>
                     </p>
                     <div class="panel panel-default">
@@ -2337,7 +2337,7 @@
                             [<a href="https://github.com/scliubit/Model-Driven-Hybrid-Channel-Estimation"
                                 target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>]
+                            </a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2021.3087269">
                         </span>
 
                     </p>
@@ -2373,7 +2373,7 @@
                             [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
                             [<a href="https://github.com/gaozhen16/a.liao-jsac21" target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>]
+                            </a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2021.3071834">
                         </span>
 
                     </p>
@@ -2454,7 +2454,7 @@
                                 target="_blank">
                                 <font color="#FF0000">Codes</font>
                             </a>]
-                            [<a href="./Files/kml_JSAC_slides.pdf" target="_blank">Slides</a>]
+                            [<a href="./Files/kml_JSAC_slides.pdf" target="_blank">Slides</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2020.3018807">
                         </span>
                     </p>
 
@@ -2665,7 +2665,7 @@
                                 Wireless Communications</i>, vol. 22, no. 5, pp. 13-21, Oct. 2015. [<font
                                 color="#FF0000">ESI High Citation</font>]
                             (<b>SCI Q1 Top, IF=11.391</b>)
-                            [<a href="https://ieeexplore.ieee.org/document/7306533" target="_blank">URL</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/7306533" target="_blank">URL</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/MWC.2015.7306533">
                         </span>
                     </p>
 
